# hexdna

./: .gitignore  README.md  pyproject.toml
game_database/: brokenshield.sqlite  brokenshield_db_schema.sqlite
hexdna/gamedata/: broken_shield_gamedata.xlsx
legacy/: .gitignore  BSUtilities.py  README.md  character_dataclasses.py  character_methods.py  characters_db_schema.sqlite  cli_methods.py  db_tests.py  delete_methods.py  main.py  pyproject.toml  run_gamedata_export.py  test_character_methods.py  utility_methods.py
legacy/characters/: broken_shield_characters.sqlite
legacy/gamedata/: broken_shield_gamedata.json  broken_shield_gamedata.sqlite  broken_shield_gamedata.xlsx  random_traits.xlsx
